file handling implement (#39)
Co-authored-by: Mikhail Bei <m.bei@neusta.de>